--- a/package.json
+++ b/package.json
@@ -1,14 +1,14 @@
 {
   "name": "stylelint-config-foxsports",
   "version": "2.0.0",
-  "description": "sharable stylelint config",
+  "description": "shareable stylelint config",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
     "type": "git",
-    "url": "ssh://git@bitbucket.foxsports.com.au:7999/~sean.carey/stylelint-config-foxsports.git"
+    "url": "https://github.com/FoxSportsAustralia/stylelint-config-foxsports.git"
   },
   "keywords": [
     "stylelint"
@@ -22,13 +22,13 @@
     "fs-default-project-config": "^6.1.2"
   },
   "peerDependencies": {
-    "stylelint": "^9.3.0"
+    "stylelint": "^10.0.1"
   },
   "dependencies": {
     "stylelint-csstree-validator": "^1.3.0",
-    "stylelint-declaration-block-no-ignored-properties": "^1.1.0",
-    "stylelint-declaration-strict-value": "^1.0.4",
-    "stylelint-order": "^0.8.0",
-    "stylelint-selector-bem-pattern": "^2.0.0"
+    "stylelint-declaration-block-no-ignored-properties": "^2.1.0",
+    "stylelint-declaration-strict-value": "^1.1.3",
+    "stylelint-order": "^3.0.0",
+    "stylelint-selector-bem-pattern": "^2.1.0"
   }
 }
