WEB-1417, updated the lock, seemed like it was still using version 10 of stylelint

--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "stylelint": "^14.0.1"
   },
   "dependencies": {
+    "stylelint": "^14.0.1",
     "stylelint-csstree-validator": "^1.9.0",
     "stylelint-declaration-block-no-ignored-properties": "^2.4.0",
     "stylelint-declaration-strict-value": "^1.7.12",
