--- a/package.json
+++ b/package.json
@@ -25,12 +25,12 @@
     "stylelint": "^14.0.1"
   },
   "dependencies": {
-    "sass": "^1.43.4",
     "stylelint": "^14.0.1",
     "stylelint-csstree-validator": "^1.9.0",
     "stylelint-declaration-block-no-ignored-properties": "^2.4.0",
     "stylelint-declaration-strict-value": "^1.7.12",
     "stylelint-order": "^3.0.0",
+    "stylelint-scss": "^4.0.0",
     "stylelint-selector-bem-pattern": "^2.1.0"
   }
 }
