WEB-1417, well it is now asking for customSyntax again dahhh

--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
   },
   "dependencies": {
     "postcss": "^8.3.11",
+    "postcss-styled": "^0.34.0",
     "stylelint": "^14.0.1",
     "stylelint-csstree-validator": "^1.9.0",
     "stylelint-declaration-block-no-ignored-properties": "^2.4.0",
