--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
   },
   "dependencies": {
     "postcss": "^8.3.11",
+    "postcss-scss": "^4.0.2",
     "postcss-styled": "^0.34.0",
     "stylelint": "^14.0.1",
     "stylelint-csstree-validator": "^1.9.0",
