WEB-1417, let me try this just by itself, so I got rid of the other dependencies I added yesterday

--- a/package.json
+++ b/package.json
@@ -22,18 +22,14 @@
     "fs-default-project-config": "^6.1.2"
   },
   "peerDependencies": {
-    "postcss-scss": "^4.0.2",
     "stylelint": "^14.0.1"
   },
   "dependencies": {
-    "postcss": "^8.3.11",
-    "postcss-scss": "^4.0.2",
-    "stylelint": "^14.0.1",
+    "@stylelint/postcss-css-in-js": "^0.37.2",
     "stylelint-csstree-validator": "^1.9.0",
     "stylelint-declaration-block-no-ignored-properties": "^2.4.0",
     "stylelint-declaration-strict-value": "^1.7.12",
     "stylelint-order": "^3.0.0",
-    "stylelint-scss": "^4.0.0",
     "stylelint-selector-bem-pattern": "^2.1.0"
   }
 }
