--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "fs-default-project-config": "^6.1.2"
   },
   "peerDependencies": {
-    "stylelint": "^14.0.1"
+    "stylelint": "^14.0.1",
+    "@stylelint/postcss-css-in-js": "^0.37.2"
   },
   "dependencies": {
     "@stylelint/postcss-css-in-js": "^0.37.2",
