--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
   "dependencies": {
     "postcss": "^8.1.0",
     "postcss-syntax": "^0.36.2",
+    "stylelint": "^14.0.1",
     "@stylelint/postcss-css-in-js": "^0.37.2",
     "stylelint-csstree-validator": "^1.9.0",
     "stylelint-declaration-block-no-ignored-properties": "^2.4.0",
