--- a/package.json
+++ b/package.json
@@ -21,13 +21,13 @@
     "eslint-plugin-import": "^2.8.0",
     "fs-default-project-config": "^6.1.2"
   },
-  "peerDependencies": {
-    "stylelint": "^10.0.1"
-  },
   "dependencies": {
-    "stylelint-csstree-validator": "^1.3.0",
-    "stylelint-declaration-block-no-ignored-properties": "^2.1.0",
-    "stylelint-declaration-strict-value": "^1.1.3",
+    "postcss": "^8.3.3",
+    "postcss-scss": "^4.0.2",
+    "stylelint": "^14.0.1",
+    "stylelint-csstree-validator": "^1.9.0",
+    "stylelint-declaration-block-no-ignored-properties": "^2.4.0",
+    "stylelint-declaration-strict-value": "^1.7.12",
     "stylelint-order": "^3.0.0",
     "stylelint-selector-bem-pattern": "^2.1.0"
   }
